# autonewsvideo

./: .gitignore  BUGFIX.md  BUGFIX_DIALOG.md  CLAUDE.md  CONFIG_GUIDE.md  CONFIG_UPDATE.md  KIMI_SETUP.md  PROGRESS_FIX.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  STYLE_UPDATE.md  SUBTITLE_DISABLED.md  TEMPLATE_FIX.md  TRANSITION_SOUND.md  UI_OPTIMIZATION.md  WORKFLOW_UPDATE.md  config.py  main.py  pyproject.toml  test_basic.py  test_card.py  test_config.py  test_opening.py  test_opening_image.py  test_startup.py  user_config.json.example
models/: __init__.py  news.py
services/: __init__.py  ai_writer.py  card_template.py  config_manager.py  image_downloader.py  image_generator.py  minimax_tts.py  rss_fetcher.py  sound_effects.py  tts_service.py  video_composer.py
templates/: news_slide.css  news_slide.html
